[gd_scene load_steps=12 format=3 uid="uid://dggnelv0x0mnm"]

[ext_resource type="Script" path="res://src/ui/choices/Choice.gd" id="1_exjis"]
[ext_resource type="Texture2D" uid="uid://b7wxi6a4krfwt" path="res://assets/ui/CloudPuffPanel.png" id="1_my601"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_r5g4w"]
texture = ExtResource("1_my601")
texture_margin_left = 48.0
texture_margin_top = 48.0
texture_margin_right = 48.0
texture_margin_bottom = 48.0
axis_stretch_horizontal = 2
axis_stretch_vertical = 2

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hi0uy"]
size = Vector2(160, 160)

[sub_resource type="LabelSettings" id="LabelSettings_mwbmx"]
font_size = 32
font_color = Color(0, 0, 0, 1)

[sub_resource type="Animation" id="Animation_1rjw3"]
resource_name = "Hover"
length = 0.4
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudBG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.35),
"transitions": PackedFloat32Array(1, 1, 1, 1.51572, 0.258816),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1.1, 0.9), Vector2(0.95, 1.05), Vector2(1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudBG:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15, 0.25, 0.4),
"transitions": PackedFloat32Array(1, 0.420448, 0.554785, 1.86607, 1),
"update": 0,
"values": [0.0, 0.174533, -0.0872665, 0.0523599, 0.0]
}

[sub_resource type="Animation" id="Animation_3nl0h"]
resource_name = "Dehover"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudBG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(0.95, 0.95), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudBG:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_073y2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudBG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudBG:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_ice86"]
resource_name = "Select"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudBG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.25, 0.401021, 0.801021, 1),
"transitions": PackedFloat32Array(1, 1, 1, 0.392292, 1, 3.24901),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 0.95), Vector2(0.75, 0.75), Vector2(1.15, 1.15), Vector2(1.15, 1.15), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudBG:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.15, 0.2, 0.25, 0.4, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 0.392292, 1, 1),
"update": 0,
"values": [0.0, 0.174533, -0.174533, 0.174533, -0.174533, 0.0, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_r2gob"]
resource_name = "Neglect"
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CloudBG:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.55, 0.65, 0.75, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 0.052556, 1, 0.189465),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.7, 0.7), Vector2(0.7, 0.7), Vector2(0.7, 0.7), Vector2(0.8, 0.8), Vector2(0.8, 0.8), Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CloudBG:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.3, 0.4, 0.5, 0.6, 0.65, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0872665, -0.0872665, 0.0872665, -0.0872665, 0.0, 0.0, 0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_usiju"]
_data = {
"Dehover": SubResource("Animation_3nl0h"),
"Hover": SubResource("Animation_1rjw3"),
"Neglect": SubResource("Animation_r2gob"),
"RESET": SubResource("Animation_073y2"),
"Select": SubResource("Animation_ice86")
}

[node name="Choice" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_exjis")

[node name="CloudBG" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(320, 320)
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxTexture_r5g4w")

[node name="Margins" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 80
theme_override_constants/margin_top = 80
theme_override_constants/margin_right = 80
theme_override_constants/margin_bottom = 80

[node name="Body" type="VBoxContainer" parent="Margins"]
layout_mode = 2
mouse_filter = 2

[node name="MemoryIcon" type="TextureRect" parent="Margins/Body"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
mouse_filter = 2
texture = SubResource("PlaceholderTexture2D_hi0uy")

[node name="MemoryLabel" type="Label" parent="Margins/Body"]
layout_mode = 2
size_flags_vertical = 6
size_flags_stretch_ratio = 0.5
text = "TEXT EXAMPLE"
label_settings = SubResource("LabelSettings_mwbmx")
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_usiju")
}
